Moved image folder

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ hr {
 }
 /* Home Style */
 header {
-	background: url(../img/moutain-header.jpg) no-repeat bottom right;
+	background: url(../images/moutain-header.jpg) no-repeat bottom right;
 	background-size: cover;
 	color: #cfcfcf;
 	position: relative;
